engine-net-2/examples/Errors/SequenceUnknown.grs
new graph "Rules.grg"

exec (n:N)=init ;> (m:M)=ss()

quit
